bat.bool1.icyhot.IcyHot.scala.error
Erreur de compilation :
IcyHot:5: error: reassignment to val
    temp1=true
         ^IcyHot:8: error: reassignment to val
    temp2=true
         ^